--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -130,6 +130,7 @@
                         {
                             <ul class="nav flex-column sidebar-ul">
                                 <li class="nav-item"><a class="nav-link" href="/Project/ListAllProjects">Projects</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/Project/ProjectRequests">Project Requests </a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Task/ListAllTasks">Tasks</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Messages/Message">Messages</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Meeting/ListAllMeetings">Meetings</a></li>
