--- a/Views/Messages/Message.cshtml
+++ b/Views/Messages/Message.cshtml
@@ -3,59 +3,63 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@model FYPM.Models.Message
+@model FYPM.Models.ViewModel.MessageViewModel
 
 <div class="container mt-4">
-    <h2 class="mb-4">Messaging</h2>
-
-    <!-- Message Sending Section -->
     <div class="row">
         <div class="col-md-6">
-            <h3 class="mb-3">Send a Message</h3>
+            <h2 class="mb-4">Messaging</h2>
 
-            <div class="form-group">
-                <label for="SelectedAssignedTo">Select Students:</label>
-                <select class="form-control" id="SelectedAssignedTo" multiple="multiple" name="SelectedAssignedTo">
-                    @foreach (var option in Model.AssignedTo)
-                    {
-                        <option value="@option.Value1">@option.Text</option>
-                    }
-                </select>
-            </div>
+            <!-- Message Sending Section -->
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h3 class="mb-3">Send a Message</h3>
 
-            <div class="form-group">
-                <label for="MessageText">Type Message:</label>
-                <input type="text" class="form-control" id="MessageText" name="MessageText" required />
+                    <div class="form-group">
+                        <label for="SelectedAssignedTo">Select Students:</label>
+                        <select class="form-control" id="SelectedAssignedTo" multiple="multiple" name="SelectedAssignedTo">
+                            @foreach (var option in Model.AssignedTo)
+                            {
+                                <option value="@option.Value">@option.Text</option>
+                            }
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="MessageText">Type Message:</label>
+                        <textarea class="form-control" id="MessageText" name="MessageText" rows="3" required></textarea>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary" onclick="sendMessage()">Send</button>
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary" onclick="sendMessage()">Send</button>
         </div>
-    </div>
 
-    <hr />
-
-    <!-- Received Messages Section -->
-    <div class="row">
         <div class="col-md-6">
-            <h3 class="mb-3">Received Messages</h3>
-            <ul class="list-group">
-                @foreach (var message in Model.Messages)
-                {
-                    <li class="list-group-item">
-                        <strong>From: @message.SenderName</strong><br />
-                        @message.MessageText<br />
-                        <small>Sent on: @message.MessageDate.ToString("yyyy-MM-dd HH:mm:ss")</small>
-                    </li>
-                }
-            </ul>
+            <!-- Received Messages Section -->
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="mb-3">Received Messages</h3>
+                    <ul class="list-group">
+                        @foreach (var message in Model.Messages)
+                        {
+                            <li class="list-group-item">
+                                <strong>From: @message.SenderName</strong><br />
+                                @message.MessageText<br />
+                                <small>Sent on: @message.MessageDate.ToString("yyyy-MM-dd HH:mm:ss")</small>
+                            </li>
+                        }
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery-3.4.1.js"></script>
 <script src="~/Scripts/bootstrap.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" integrity="sha512-nMNlpuaDPrqlEls3IX/Q56H36qvBASwb3ipuo3MxeWbsQB1881ox0cRv7UPTgBlriqoynt35KjEwgGUeUXIPnw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js" integrity="sha512-2ImtlRlf2VVmiGZsjm9bEyhjGW4dU7B6TNwh/hx/iSByxNENtj3WVE6o/9Lj4TJeVXPi4bnOIMXFIJJAeufa0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script>
     function sendMessage() {
         var selectedAssignedTo = $("#SelectedAssignedTo").val();
