--- a/Views/Project/ProjectRequests.cshtml
+++ b/Views/Project/ProjectRequests.cshtml
@@ -3,49 +3,66 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model List<FYPM.Models.StudentProjectRequest>
-<h2>Project Requests Approval</h2>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-8">
-
-            <div class="form-group">
-                <label for="MenuTitle"> RequestId</label>
-                <input type="text" class="form-control" id="Request" required>
-            </div>
-
-            <div class="form-group">
-                <label for="MenuTitle"> ProjectId</label>
-                <input type="text" class="form-control" id="Project" required>
-            </div>
-
-            <div class="form-group">
-                <label for="MenuTitle"> UserId</label>
-                <input type="text" class="form-control" id="User" required>
-            </div>
-
-            <div class="form-group">
-                <label for="MenuTitle"> RequestTime</label>
-                <input type="text" class="form-control" id="RequestTime" required>
-            </div>
-
-            <div class="form-group">
-                <label for="MenuTitle"> IsApproved</label>
-                <input type="text" class="form-control" id="IsApproved" required>
-            </div>
-
-            @*<div class="form-group">
-                    <button type="submit" onclick="submitProject()" class="btn-success btn-sm" value="Upload">Upload Project</button>
-                </div>*@
-
-        </div>
+<div class="card p-3 mt-3">
+    <div class="card-title d-flex flex-wrap justify-content-between align-items-center mb-0">
+        <h3 class="card-label">
+            Project Requests Approval
+        </h3>
 
     </div>
+    <div class="card-body">
+        <div class="wrapper wrapper-content animated fadeInRight">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="ibox float-e-margins">
+                        <div class="ibox-content">
+                            <div class="wrapper wrapper-content table-responsive">
+                                <table class="table cstm_table table-hover table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>RequestId</th>
+                                            <th>ProjectId</th>
+                                            <th>UserId</th>
+                                            <th>RequestTime</th>
+                                            <th>IsApproved</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var request in Model)
+                                        {
+                                            <tr>
+                                                <td>@request.RequestId</td>
+                                                <td>@request.ProjectId</td>
+                                                <td>@request.UserId</td>
+                                                <td>@request.RequestTime</td>
+                                                <td>
+                                                    @if (request.IsApproved.HasValue && request.IsApproved.Value)
+                                                    {
+                                                        <span class="badge badge-success">@request.IsApproved</span>
+                                                    }
+                                                    else
+                                                    {
+                                                        <span class="badge badge-danger">@request.IsApproved</span>
+                                                    }
 
+                                                </td>
+                                                <td> <button type="button" class="btn btn-primary" onclick="approveProjectRequest()">Approve Request</button></td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+
+<script src="~/Scripts/jquery-3.4.1.js"></script>
 <script src="~/Scripts/bootstrap.min.js"></script>
 
 <!-- Include Select2 CSS -->
