--- a/Views/Result/Result.cshtml
+++ b/Views/Result/Result.cshtml
@@ -8,7 +8,7 @@
 <div class="card p-3 mt-3">
     <div class="card-title d-flex flex-wrap justify-content-between align-items-center mb-0">
         <h3 class="card-label">
-            Project Details
+            Result
         </h3>
         <a style="margin-left:10px" href="@Url.Action("AddResult")" class="btn btn-primary">Create Result</a>
     </div>
