--- a/Views/Messages/Message.cshtml
+++ b/Views/Messages/Message.cshtml
@@ -16,7 +16,7 @@
                     <h3 class="mb-3">Send a Message</h3>
 
                     <div class="form-group">
-                        <label for="SelectedAssignedTo">Select Students:</label>
+                        <label for="SelectedAssignedTo">Select :</label>
                         <select class="form-control" id="SelectedAssignedTo" multiple="multiple" name="SelectedAssignedTo">
                             @foreach (var option in Model.AssignedTo)
                             {
@@ -56,7 +56,7 @@
     </div>
 </div>
 
-<script src="~/Scripts/jquery-3.4.1.js"></script>
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="~/Scripts/bootstrap.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
