--- a/Views/Project/StudentProjectGrid.cshtml
+++ b/Views/Project/StudentProjectGrid.cshtml
@@ -8,7 +8,7 @@
 <div class="card p-3 mt-3">
     <div class="card-title d-flex flex-wrap justify-content-between align-items-center mb-0">
         <h3 class="card-label">
-            List of Projects offered
+            Projects
         </h3>
     </div>
     <div class="card-body">
