--- a/Views/Task/EditTask.cshtml
+++ b/Views/Task/EditTask.cshtml
@@ -40,15 +40,13 @@
         </div>
     </div>
 </div>
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="~/Scripts/bootstrap.min.js"></script>
 <script>
-
     function updateTask() {
         var selectedProjectId = $("#SelectedProjectId").val();
         var selectedAssignedTo = $("#SelectedAssignedTo").val();
-        var dueDate = $("#datepicker").val();
+        var dueDate = $("#DueDate").val();
         var taskStatus = $("#TaskStatus").val();
 
         var taskData = {
@@ -57,27 +55,31 @@
             DueDate: dueDate,
             TaskStatus: taskStatus
         };
-
         $.ajax({
             type: "POST",
-            url: "/Project/SaveTask",
+            url: "/Task/SaveTask",
             data: JSON.stringify(taskData),
             contentType: "application/json; charset=utf-8",
             dataType: "json",
-            success: TaskSaved
-        });
-
-        function TaskSaved(response) {
-            if (response == 1) {
-                window.location.href = "/Task/ListAllTasks";
+            success: function (response) {
+                // Handle successful response
+                if (response == 1) {
+                    window.location.href = "/Task/ListAllTasks";
+                }
+            },
+            error: function (xhr, status, error) {
+                // Handle error
+                console.error("Error: " + status, error);
+                $("#result").html("Error: Unable to fetch data");
             }
-        }
+        });
     }
 
     $(document).ready(function () {
         $("#SelectedProjectId").val("@Model.SelectedProjectId");
-        $("#SelectedAssignedTo").val([@Model.SelectedAssignedTo]);
+        @*$("#SelectedAssignedTo").val(["@Model.SelectedAssignedTo"]);*@
     });
+
 
 </script>
 
