--- a/Views/Task/StudentTask.cshtml
+++ b/Views/Task/StudentTask.cshtml
@@ -11,11 +11,13 @@
     .custom-select {
         appearance: none; /* Remove default styling on certain browsers */
         -webkit-appearance: none; /* Remove default styling on Safari/Chrome */
-        -moz-appearance: none; /* Remove default styling on Firefox */ /* Adjust padding as needed */
+        -moz-appearance: none; /* Remove default styling on Firefox */
+        padding: 10px; /* Adjust padding as needed */
         border: 1px solid #ccc; /* Add a border */
         border-radius: 5px; /* Add rounded corners */
         background-color: #fff; /* Set background color */
         color: #333; /* Set text color */
+        width: 60%; /* Set width to 100% */
         cursor: pointer; /* Change cursor on hover */
     }
 
@@ -36,60 +38,52 @@
         }
 </style>
 
-
-<div class="card p-3 mt-3">
-    <div class="card-title d-flex flex-wrap justify-content-between align-items-center mb-0">
-        <h3 class="card-label">
-            Tasks
-        </h3>
-    </div>
-    <div class="card-body">
-        <div class="wrapper wrapper-content animated fadeInRight">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="ibox float-e-margins">
-                        <div class="ibox-content">
-                            <div class="wrapper wrapper-content table-responsive">
-                                @if (Model.Count() > 0)
-                                {
-                                    <table class="table table-hover table-striped">
-                                        <thead>
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox float-e-margins">
+                <div class="ibox-content">
+                    <div class="wrapper wrapper-content">
+                        <div class="row">
+                            @if (Model.Count() > 0)
+                            {
+                                <table class="table  table-hover table-responsive table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>Task Name</th>
+                                            <th>Task Description</th>
+                                            <th>Due Date</th>
+                                            <th>Task Status</th>
+                                            <th>Document</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="table_body" class="scrollable">
+                                        @foreach (var task in Model)
+                                        {
                                             <tr>
-                                                <th>Task Name</th>
-                                                <th>Task Description</th>
-                                                <th>Due Date</th>
-                                                <th>Task Status</th>
-                                                <th>Document</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody id="table_body" class="scrollable">
-                                            @foreach (var task in Model)
-                                            {
-                                                <tr>
-                                                    <td>@task.TaskName</td>
-                                                    <td>@task.TaskDescription</td>
-                                                    <td>@task.DueDate.Value.Date.ToString("MMM, dd yyyy")</td>
-                                                    <td>
-                                                        <select class="custom-select task-status-dropdown" data-task-id="@task.TaskId" data-student-id="@task.AssignedTo">
-                                                            <option value="Not Started" @(task.TaskStatus == "Not Started" ? "selected" : "")>Not Started</option>
-                                                            <option value="In Progress" @(task.TaskStatus == "In Progress" ? "selected" : "")>In Progress</option>
-                                                            <option value="Completed" @(task.TaskStatus == "Completed" ? "selected" : "")>Completed</option>
-                                                        </select>
+                                                <td>@task.TaskName</td>
+                                                <td>@task.TaskDescription</td>
+                                                <td>@task.DueDate.Value.Date</td>
+                                                <td>
+                                                    <select class="custom-select task-status-dropdown" data-task-id="@task.TaskId" data-student-id="@task.AssignedTo">
+                                                        <option value="Not Started" @(task.TaskStatus == "Not Started" ? "selected" : "")>Not Started</option>
+                                                        <option value="In Progress" @(task.TaskStatus == "In Progress" ? "selected" : "")>In Progress</option>
+                                                        <option value="Completed" @(task.TaskStatus == "Completed" ? "selected" : "")>Completed</option>
+                                                    </select>
 
-                                                    </td>
-                                                    <td>
-                                                        <a href="/Task/DownloadDocuments?projectId=@task.ProjectId" class="btn btn-success" target="_blank">Download</a>
-                                                    </td>
-                                                </tr>
-                                            }
-                                        </tbody>
-                                    </table>
-                                }
-                                else
-                                {
-                                    <p>No tasks assigned yet.</p>
-                                }
-                            </div>
+                                                </td>
+                                                <td>
+                                                    <a href="/Project/DownloadDocuments?projectId=@task.ProjectId" class="btn btn-success" target="_blank">Download</a>
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            }
+                            else
+                            {
+                                <p>No tasks assigned yet.</p>
+                            }
                         </div>
                     </div>
                 </div>
@@ -97,9 +91,6 @@
         </div>
     </div>
 </div>
-
-
-
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/bootstrap.min.js"></script>
