--- a/Views/Meeting/StartMeeting.cshtml
+++ b/Views/Meeting/StartMeeting.cshtml
@@ -1,189 +1,35 @@
 ﻿@model FYPM.Models.ViewModel.StartMeetingViewModel
-@{
-    Layout = null;
-}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Start Meeting</title>
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-   
-    <style>
-        .sso-hidden {
-            display: block;
-        }
-
-        .banner {
-            padding: 0;
-            background-color: #52575c;
-            color: white;
-        }
-
-        .banner-text {
-            padding: 8px 20px;
-            margin: 0;
-        }
-
-
-        #join-form {
-            margin-top: 10px;
-        }
-
-        .tips {
-            font-size: 12px;
-            margin-bottom: 2px;
-            color: gray;
-        }
-
-        .join-info-text {
-            margin-bottom: 2px;
-        }
-
-        .join-info-group input {
-            width: 100%;
-            margin-bottom: 2px;
-        }
-
-        .player {
-            width: 480px;
-            height: 320px;
-        }
-
-        .player-name {
-            margin: 8px 0;
-        }
-
-        #success-alert, #success-alert-with-token {
-            display: none;
-        }
-
-        @@media (max-width: 640px) {
-            .player {
-                width: 320px;
-                height: 240px;
-
-            }
-        }
-
-        .collapse-wrapper {
-            display: inline-block;
-            position: relative;
-        }
-
-        .collapse-content {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            z-index: 999;
-        }
-
-
-        .collapse-wrapper .collapse-btn {
-            padding-left: 6.5rem;
-            padding-right: 6.5rem
-        }
-
-        @@media (max-width: 640px) {
-            .collapse-wrapper {
-                margin-top: 10px;
-            }
-        }
-
-        @@media (max-width: 380px) {
-            .collapse-wrapper .collapse-btn {
-                padding-left: 4.5rem;
-                padding-right: 4.5rem
-            }
-        }
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            color: #333;
-        }
-
-        .container-fluid.banner {
-            background-color: #007bff;
-            color: #fff;
-            padding: 15px;
-            text-align: center;
-        }
-
-        .banner-text {
-            margin: 0;
-            font-size: 24px;
-        }
-        .button-group {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-            .button-group button {
-                margin: 5px;
-                min-width: 120px; /* Adjust the width as needed */
-            }
-    </style>
+    <title>Basic Video Call -- Agora</title>
+    <link rel="stylesheet" href="./vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
-
 <body>
-                          
-    <!--
-      This page interacts with the Agora Voice Call for Web Next Generation SDK to easily create Video Call
-      functionality in a Web page.
-
-      This HTML page imports the next generation Agora Video SDK for Web from
-      https://download.agora.io/sdk/release/AgoraRTC_N.js and local functionality from cloudProxy.js.
-
-      The form in this page passes data and actions input by the user to cloudProxy.js. basicVideoCall
-      creates an AgoraRTC client which adds and and removes local and remote users to a specific channel.
-    -->
-    <!--
-      Create the banner at the top of the page.
-    -->
     <div class="container-fluid banner">
-        <p class="banner-text">Audio Video Conference</p>
+        <p class="banner-text">Basic Video Call</p>
         <a style="color: rgb(255, 255, 255);fill: rgb(255, 255, 255);fill-rule: evenodd; position: absolute; right: 10px; top: 4px;"
-           class="Header-link " href="https://github.com/AgoraIO/API-Examples-Web/tree/main/Demo">
-            <svg class="octicon octicon-mark-github v-align-middle" height="32" viewBox="0 0 16 16" version="1.1" width="32"
-                 aria-hidden="true">
-                <path fill-rule="evenodd"
-                      d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
-                </path>
-            </svg>
+           class="Header-link " href="https://github.com/AgoraIO-Community/AgoraWebSDK-NG/tree/master/Demo">
+            <svg class="octicon octicon-mark-github v-align-middle" height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
         </a>
     </div>
 
-    <!--
-      When a user tries to join a Video Call without supplying an AccessToken, this button
-      calls #success-alert in cloudProxy.js. #success-alert refreshes this page with the
-      user information.
-    -->
     <div id="success-alert" class="alert alert-success alert-dismissible fade show" role="alert">
-        <strong>Congratulations!</strong><span> You can invite others join this channel by click </span><a href=""
-                                                                                                           target="_blank">here</a>
+        <strong>Congratulations!</strong><span> You can invite others join this channel by click </span><a href="" target="_blank">here</a>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-
-    <!--
-      When a user successfully joins a Video Call channel with an AccessToken, this section displays
-      a banner with a close button.
-    -->
     <div id="success-alert-with-token" class="alert alert-success alert-dismissible fade show" role="alert">
         <strong>Congratulations!</strong><span> Joined room successfully. </span>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-
-    <!--
-      When a user successfully joins a Video Call channel with an AccessToken, this section displays
-      a banner with a close button.
-    -->
     <div id="success-alert-with-token" class="alert alert-success alert-dismissible fade show" role="alert">
         <strong>Congratulations!</strong><span> Joined room successfully. </span>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -192,133 +38,32 @@
     </div>
 
     <div class="container">
-        <div class="card">
-            <div class="card-header">
-                <h5 class="card-title">Start Meeting</h5>
+        <form id="join-form">
+            <div class="row join-info-group">
+                <div class="col-sm">
+                    <input id="uid" type="text" placeholder="enter token" value="@Model.Uid">
+                    <p class="join-info-text">AppID</p>
+                    <input id="appid" type="hidden" placeholder="enter appid" value="@Model.AppId">
+                    <p class="tips">If you don`t know what is your appid, checkout <a href="https://docs.agora.io/en/Agora%20Platform/terms?platform=All%20Platforms#a-nameappidaapp-id">this</a></p>
+                </div>
+                <div class="col-sm">
+                    <p class="join-info-text">Token(optional)</p>
+                    <input id="token" type="text" placeholder="enter token" value="@Model.Token">
+                    <p class="tips">If you don`t know what is your token, checkout <a href="https://docs.agora.io/en/Agora%20Platform/terms?platform=All%20Platforms#a-namekeyadynamic-key">this</a></p>
+                </div>
+                <div class="col-sm">
+                    <p class="join-info-text">Channel</p>
+                    <input id="channel" type="text" placeholder="enter channel name" value="@Model.ChannelName">
+                    <p class="tips">If you don`t know what is your channel, checkout <a href="https://docs.agora.io/en/Agora%20Platform/terms?platform=All%20Platforms#channel">this</a></p>
+                </div>
             </div>
-            <div class="card-body">
-                <!--
-              Input fields so the user can securely join a Video Call channel.
-            -->
-                <form id="join-form">
-                    <div class="form-group">
-                        <div class="col-sm sso-hidden">
-                            <p class="join-info-text">APP ID</p>
-                            <input id="appid" type="text" placeholder="Enter the appid" value="@Model.AppId">
-                            <p class="tips">You find your APP ID in the <a href="https://console.agora.io/projects">Agora Console</a></p>
-                        </div>
-                        <div class="col-sm sso-hidden">
-                            <p class="join-info-text">Token(optional)</p>
-                            <input id="token" type="text" placeholder="Enter the app token" value="@Model.Token">
-                            <p class="tips">
-                                To create a temporary token, <a href="https://console.agora.io/projects">edit your project</a>
-                                in Agora Console.
-                            </p>
-                        </div>
-                        <div class="col-sm">
-                            <p class="join-info-text">Channel Name</p>
-                            <input id="channel" type="text" placeholder="Enter the channel name" required value="@Model.ChannelName">
-                            <p class="tips">
-                                You create a channel when you create a temporary token. You guessed it, in <a href="https://console.agora.io/projects">Agora Console</a>
-                            </p>
-                        </div>
-                        <div class="col-sm">
-                            <p class="join-info-text">User ID(optional)</p>
-                            <input id="uid" value="@Model.Uid" type="text" onkeyup="this.value=this.value.replace(/[^0-9]/g,'')"
-                                   onafterpaste="this.value=this.value.replace(/[^0-9]/g,'')" placeholder="Enter the user ID">
-                        </div>
-                    </div>
 
-                    <!--
-                  Join or leave a Video Call channel.
-                -->
-                    <div class="button-group" style="display:inline-block">
-                        <button id="join" type="submit" class="btn btn-primary btn-sm" style="height: 30px;">Join</button>
-                        <button id="leave" type="button" class="btn btn-primary btn-sm" style="height: 30px;" disabled>Leave</button>
-                        <button id="mute" type="button" class="btn btn-primary btn-sm" style="height: 30px;" onclick="Mute()" disabled>Mute</button>
-                        <button id="stopVideo" type="button" class="btn btn-primary btn-sm" style="height: 30px;" onclick="StopVideo()" disabled>Stop Video Sharing</button>
-                        <button id="mute" type="button" class="btn btn-primary btn-sm" style="height: 30px;" onclick="UnMute()">UnMute</button>
-                        <button id="stopVideo" type="button" class="btn btn-primary btn-sm" style="height: 30px;" onclick="StartVideo()">Start Video Sharing</button>
-                        <div class="collapse-wrapper" style="height: 30px;">
-                            <div class="collapse-content">
-                                <button class="btn btn-primary btn-sm collapse-btn" type="button" data-toggle="collapse"
-                                        data-target="#agora-collapse" aria-expanded="false" aria-controls="agora-collapse">
-                                    ADVANCED SETTINGS
-                                </button>
-                                <!-- collapse -->
-                                <div class="collapse" id="agora-collapse" style="width: 100%;z-index: 9999;">
-                                    <div class="card card-body">
-                                        <!-- Microphone -->
-                                        <h6 class="device-name">Microphone</h6>
-                                        <div class="input-group mb-3">
-                                            <div class="input-group-prepend">
-                                                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
-                                                        aria-haspopup="true" aria-expanded="false">
-                                                    Mics
-                                                </button>
-                                                <div class="mic-list dropdown-menu"></div>
-                                            </div>
-                                            <input type="text" class="mic-input form-control" aria-label="Text input with dropdown button"
-                                                   readonly>
-                                        </div>
-                                        <!-- Camera -->
-                                        <h6 class="device-name">Camera</h6>
-                                        <div class="input-group mb-3">
-                                            <div class="input-group-prepend">
-                                                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
-                                                        aria-haspopup="true" aria-expanded="false">
-                                                    Cams
-                                                </button>
-                                                <div class="cam-list dropdown-menu"></div>
-                                            </div>
-                                            <input type="text" class="cam-input form-control" aria-label="Text input with dropdown button"
-                                                   readonly>
-                                        </div>
-                                        <!-- CODEC -->
-                                        <h6 class="device-name">CODEC</h6>
-                                        <span style="padding-left: 1.25rem;">
-                                            <input class="form-check-input" type="radio" name="radios" id="vp8" value="vp8"
-                                                   checked>
-                                            <label class="form-check-label" for="vp8">
-                                                vp8
-                                            </label>
-                                        </span>
-                                        <span style="padding-left: 1.25rem;">
-                                            <input class="form-check-input" type="radio" name="radios" id="vp9" value="vp9">
-                                            <label class="form-check-label" for="vp9">
-                                                vp9
-                                            </label>
-                                        </span>
-                                        <span style="padding-left: 1.25rem;" class="mb-3">
-                                            <input class="form-check-input" type="radio" name="radios" id="h264" value="h264">
-                                            <label class="form-check-label" for="h264">
-                                                h264
-                                            </label>
-                                        </span>
-                                        <!-- profile -->
-                                        <h6 class="device-name">Video Profiles</h6>
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
-                                                        aria-haspopup="true" aria-expanded="false">
-                                                    Profiles
-                                                </button>
-                                                <div class="profile-list dropdown-menu"></div>
-                                            </div>
-                                            <input type="text" class="profile-input form-control" aria-label="Text input with dropdown button"
-                                                   readonly>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
+            <div class="button-group">
+                <button id="join" type="submit" class="btn btn-primary btn-sm">Join</button>
+                <button id="leave" type="button" class="btn btn-primary btn-sm" disabled>Leave</button>
             </div>
-        </div>
-        <!--
-      This local media splayer is enabled when the user has successfully joined a Video Call channel.
-    -->
+        </form>
+
         <div class="row video-group">
             <div class="col">
                 <p id="local-player-name" class="player-name"></p>
@@ -331,17 +76,12 @@
         </div>
     </div>
 
-            <!--
-          Import the Agora Video Call SDK for Web and local calls to it.
-        -->
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/AgoraRTC_N-4.20.0.js"></script>
+    <script src="~/Scripts/AgoraMeeting.js"></script>
 
-            <script src="~/Scripts/jquery-3.4.1.js"></script>
-            <script src="~/Scripts/bootstrap.bundle.min.js"></script>
-            <script src="https://download.agora.io/sdk/release/AgoraRTC_N.js"></script>
-            <script src="~/Scripts/AgoraMeeting.js"></script>
 </body>
 </html>
-
-
 
 
